Implement item sorting, add unit tests for sorting, reformat code, optimize imports